main page fixes modal window templates static

--- a/static/static_dirs/less/creative.less
+++ b/static/static_dirs/less/creative.less
@@ -349,3 +349,23 @@ img::-moz-selection {
 body {
     webkit-tap-highlight-color: @theme-dark;
 }
+
+.child1{
+  height: 250px;
+  position: absolute;
+  bottom: 50px;
+  display: none;
+}
+
+
+.parallax {
+
+  height: 100%;
+  background-size: cover;
+  background-size: cover;
+}
+
+#paralax1 { background-image: url(../img/homebg.png); }
+
+#about { background-image: url(../img/about.png); .background-cover; background-color: #6B5CA2}
+
