--- a/templates/scripts.html
+++ b/templates/scripts.html
@@ -5,6 +5,12 @@
 <!-- jQuery -->
     <script src="{% static 'js/jquery.js' %}"></script>
 
+    <script src="{% static 'js/simpleparallax.min.js' %}"></script>
+
+    <script>
+        $('.parallax').simpleParallax();
+
+    </script>
     <!-- Bootstrap Core JavaScript -->
     <script src="{% static 'js/bootstrap.min.js' %}"></script>
 
@@ -12,6 +18,7 @@
     <script src="{% static 'js/jquery.easing.min.js' %}"></script>
     <script src="{% static 'js/jquery.fittext.js' %}"></script>
     <script src="{% static 'js/wow.min.js' %}"></script>
+    <script src="{% static 'js/contact_me.js' %}"></script>
 
     <!-- Custom Theme JavaScript -->
     <script src="{% static 'js/creative.js' %}"></script>
