--- a/static/static_dirs/less/creative.css
+++ b/static/static_dirs/less/creative.css
@@ -8,7 +8,7 @@ body {
   font-family: 'Merriweather', 'Helvetica Neue', Arial, sans-serif;
 }
 hr {
-  border-color: #f05f40;
+  border-color: #6b5ca2;
   border-width: 3px;
   max-width: 50px;
 }
@@ -19,11 +19,11 @@ a {
   -webkit-transition: all 0.35s;
   -moz-transition: all 0.35s;
   transition: all 0.35s;
-  color: #f05f40;
+  color: #6b5ca2;
 }
 a:hover,
 a:focus {
-  color: #eb3812;
+  color: #564a81;
 }
 h1,
 h2,
@@ -39,7 +39,7 @@ p {
   margin-bottom: 20px;
 }
 .bg-primary {
-  background-color: #f05f40;
+  background-color: #6b5ca2;
 }
 .bg-dark {
   background-color: #222222;
@@ -60,20 +60,24 @@ aside {
 .navbar-default {
   background-color: white;
   border-color: rgba(34, 34, 34, 0.05);
+  color: #000;
   font-family: 'Open Sans', 'Helvetica Neue', Arial, sans-serif;
   -webkit-transition: all 0.35s;
   -moz-transition: all 0.35s;
   transition: all 0.35s;
 }
 .navbar-default .navbar-header .navbar-brand {
-  color: #f05f40;
+  color: #6b5ca2;
   font-family: 'Open Sans', 'Helvetica Neue', Arial, sans-serif;
   font-weight: 700;
   text-transform: uppercase;
 }
 .navbar-default .navbar-header .navbar-brand:hover,
 .navbar-default .navbar-header .navbar-brand:focus {
-  color: #eb3812;
+  color: #222222;
+}
+.navbar-default .nav a {
+  color: #222222;
 }
 .navbar-default .nav > li > a,
 .navbar-default .nav > li > a:focus {
@@ -84,11 +88,11 @@ aside {
 }
 .navbar-default .nav > li > a:hover,
 .navbar-default .nav > li > a:focus:hover {
-  color: #f05f40;
+  color: #6b5ca2;
 }
 .navbar-default .nav > li.active > a,
 .navbar-default .nav > li.active > a:focus {
-  color: #f05f40 !important;
+  color: #6b5ca2 !important;
   background-color: transparent;
 }
 .navbar-default .nav > li.active > a:hover,
@@ -101,31 +105,31 @@ aside {
     border-color: rgba(255, 255, 255, 0.3);
   }
   .navbar-default .navbar-header .navbar-brand {
-    color: rgba(255, 255, 255, 0.7);
+    color: #222222;
   }
   .navbar-default .navbar-header .navbar-brand:hover,
   .navbar-default .navbar-header .navbar-brand:focus {
-    color: white;
+    color: #6b5ca2;
   }
   .navbar-default .nav > li > a,
   .navbar-default .nav > li > a:focus {
-    color: rgba(255, 255, 255, 0.7);
+    color: #222222;
   }
   .navbar-default .nav > li > a:hover,
   .navbar-default .nav > li > a:focus:hover {
-    color: white;
+    color: #6b5ca2;
   }
   .navbar-default.affix {
     background-color: white;
     border-color: rgba(34, 34, 34, 0.05);
   }
   .navbar-default.affix .navbar-header .navbar-brand {
-    color: #f05f40;
+    color: #6b5ca2;
     font-size: 14px;
   }
   .navbar-default.affix .navbar-header .navbar-brand:hover,
   .navbar-default.affix .navbar-header .navbar-brand:focus {
-    color: #eb3812;
+    color: #564a81;
   }
   .navbar-default.affix .nav > li > a,
   .navbar-default.affix .nav > li > a:focus {
@@ -133,7 +137,7 @@ aside {
   }
   .navbar-default.affix .nav > li > a:hover,
   .navbar-default.affix .nav > li > a:focus:hover {
-    color: #f05f40;
+    color: #6b5ca2;
   }
 }
 header {
@@ -144,10 +148,9 @@ header {
   -moz-background-size: cover;
   background-size: cover;
   -o-background-size: cover;
-  background-position: center;
-  background-image: url('../img/header.jpg');
+  background-color: #fff;
   text-align: center;
-  color: white;
+  color: #222222;
 }
 header .header-content {
   position: relative;
@@ -166,7 +169,7 @@ header .header-content .header-content-inner hr {
 }
 header .header-content .header-content-inner p {
   font-weight: 300;
-  color: rgba(255, 255, 255, 0.7);
+  color: #222222;
   font-size: 16px;
   margin-bottom: 50px;
 }
@@ -217,7 +220,7 @@ header .header-content .header-content-inner p {
   color: white;
   opacity: 0;
   display: block;
-  background: rgba(240, 95, 64, 0.9);
+  background: rgba(107, 92, 162, 0.9);
   position: absolute;
   bottom: 0;
   text-align: center;
@@ -262,7 +265,7 @@ header .header-content .header-content-inner p {
   margin: 0 auto 20px;
 }
 .text-primary {
-  color: #f05f40;
+  color: #6b5ca2;
 }
 .no-gutter > [class*='col-'] {
   padding-right: 0;
@@ -318,8 +321,8 @@ fieldset[disabled] .btn-default.active {
 }
 .btn-primary {
   color: white;
-  background-color: #f05f40;
-  border-color: #f05f40;
+  background-color: #6b5ca2;
+  border-color: #6b5ca2;
   -webkit-transition: all 0.35s;
   -moz-transition: all 0.35s;
   transition: all 0.35s;
@@ -331,8 +334,8 @@ fieldset[disabled] .btn-default.active {
 .btn-primary.active,
 .open > .dropdown-toggle.btn-primary {
   color: white;
-  background-color: #ee4b28;
-  border-color: #ed431f;
+  background-color: #605392;
+  border-color: #5c4f8b;
 }
 .btn-primary:active,
 .btn-primary.active,
@@ -357,11 +360,11 @@ fieldset[disabled] .btn-primary:active,
 .btn-primary.disabled.active,
 .btn-primary[disabled].active,
 fieldset[disabled] .btn-primary.active {
-  background-color: #f05f40;
-  border-color: #f05f40;
+  background-color: #6b5ca2;
+  border-color: #6b5ca2;
 }
 .btn-primary .badge {
-  color: #f05f40;
+  color: #6b5ca2;
   background-color: white;
 }
 .btn {
@@ -394,4 +397,25 @@ img::-moz-selection {
 }
 body {
   webkit-tap-highlight-color: #222222;
+}
+.child1 {
+  height: 250px;
+  position: absolute;
+  bottom: 50px;
+  display: none;
+}
+.parallax {
+  height: 100%;
+  background-size: cover;
+}
+#paralax1 {
+  background-image: url(../img/homebg.png);
+}
+#about {
+  background-image: url(../img/dark_10-wallpaper-3840x2160.jpg);
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  background-size: cover;
+  -o-background-size: cover;
+  background-color: #6b5ca2;
 }
