--- a/templates/head.html
+++ b/templates/head.html
@@ -21,7 +21,7 @@
     <link rel="stylesheet" href="{% static 'css/animate.min.css' %}" type="text/css">
 
     <!-- Custom CSS -->
-{#    <link rel="stylesheet" href="{% static 'css/creative.css' %}" type="text/css">#}
+    <link rel="stylesheet" href="{% static 'css/creative.css' %}" type="text/css">
  <link rel="stylesheet/less" type="text/css" href="{% static 'less/creative.less' %}" />
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
