--- a/templates/header.html
+++ b/templates/header.html
@@ -1,10 +1,25 @@
-    <header>
+{% load staticfiles %}
+
+<header id="paralax1" class="parallax" data-dir="up" >
         <div class="header-content">
             <div class="header-content-inner">
-                <h1>Your Favorite Source of Free Bootstrap Themes</h1>
+                <img src="{% static 'img/logo.png'%}" class="img-responsive center-block" alt=""/>
                 <hr>
                 <p>Start Bootstrap can help you build better websites using the Bootstrap CSS framework! Just download your template and start going, no strings attached!</p>
-                <a href="#about" class="btn btn-primary btn-xl page-scroll">Find Out More</a>
+             <div class="row">
+
+                    <div class="col-xs-6 col-xs-offset-2 col-md-4 col-md-offset-3">
+                        <input type="password" class="form-control input-lg" placeholder="Enter password.."><br/>
+
+                    </div>
+                    <div class="col-xs-1">
+                        <a href="#" class="btn btn-primary btn-xl">Come In</a>
+                    </div>
+                <div class="col-md-12"><button class="center-block" data-toggle="modal" data-target="#formModal" data-whatever="@getbootstrap">No password yet?</button></div>
+
+                 <img class="img-responsive child1"  src="{% static 'img/child1.png' %}">
+            </div>
+
             </div>
         </div>
     </header>
