--- a/templates/home.html
+++ b/templates/home.html
@@ -10,3 +10,9 @@
 
 {% block header %}{% include 'header.html' %}{% endblock %}
 
+{% block about %}{% include 'about.html' %}{% endblock %}
+
+{% block contact %}{% include 'contact.html' %}{% endblock %}
+
+{% block modal %}{% include 'modal_reg.html' %}{% endblock %}
+
