--- a/static/static_dirs/less/creative.less
+++ b/static/static_dirs/less/creative.less
@@ -367,5 +367,50 @@ body {
 
 #paralax1 { background-image: url(../img/homebg.png); }
 
-#about { background-image: url(../img/about.png); .background-cover; background-color: #6B5CA2}
 
+
+//d
+//.parallax {
+//  perspective: 1px;
+//  height: 100vh;
+//  overflow-x: hidden;
+//  overflow-y: auto;
+//}
+//
+//.parallax__layer {
+//  position: absolute;
+//  top: 0;
+//  right: 0;
+//  bottom: 0;
+//  left: 0;
+//}
+//
+//.parallax__layer--base {
+//  transform: translateZZ(-1px) scale(2);
+//}
+//
+//.parallax__layer--back {
+//  transform: translateZ(-2px) scale(3);
+//}
+
+
+
+
+.catalog {
+  text-align: center;
+
+}
+
+.catalog_a {
+  border:1px solid #ccc;
+  padding: 2%;
+  margin-bottom: 2%;
+    span {
+      color: @theme-dark;
+      display: inline-block;
+      margin-bottom: 2%;
+      font-weight: 700;
+      font-size: 16px;
+    }
+
+}
