--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,3 +1,5 @@
+{% load staticfiles %}
+
 <section id="contact">
         <div class="container">
             <div class="row">
@@ -13,7 +15,18 @@
                 <div class="col-lg-4 text-center">
                     <i class="fa fa-envelope-o fa-3x wow bounceIn" data-wow-delay=".1s"></i>
                     <p><a href="mailto:your-email@your-domain.com">feedback@startbootstrap.com</a></p>
+
                 </div>
-            </div>
+
+{##}
+{#            </div>#}
+{#            <div class="parallax">#}
+{#  <div class="parallax__layer parallax__layer--back">#}
+{#      <img src="{% static 'img/logo.png' %}" alt=""/>#}
+{#  </div>#}
+{#  <div class="parallax__layer parallax__layer--base">#}
+{#             <img src="{% static 'img/logo.png' %}" alt=""/>#}
+{#  </div>#}
+</div>
         </div>
     </section>
