--- a/templates/head.html
+++ b/templates/head.html
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="{% static 'font-awesome/css/font-awesome.min.css' %}" type="text/css">
 
     <!-- Plugin CSS -->
-    <link rel="stylesheet" href="{% static 'css/animate.min.css' %}" type="text/css">
+{#    <link rel="stylesheet" href="{% static 'css/animate.min.css' %}" type="text/css">#}
 
     <!-- Custom CSS -->
     <link rel="stylesheet" href="{% static 'css/creative.css' %}" type="text/css">
@@ -31,3 +31,7 @@
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
      <script src="{% static 'js/less.min.js' %}" type="text/javascript"></script>
+
+
+    <script src="{% static 'js/mediaelement-and-player.min.js' %}"></script>
+    <link rel="stylesheet" href="{% static 'css/mediaelementplayer.css' %}" />
