--- a/templates/header.html
+++ b/templates/header.html
@@ -1,23 +1,36 @@
 {% load staticfiles %}
 
-<header id="paralax1" class="parallax" data-dir="up" >
+<header>
         <div class="header-content">
             <div class="header-content-inner">
                 <img src="{% static 'img/logo.png'%}" class="img-responsive center-block" alt=""/>
                 <hr>
                 <p>Start Bootstrap can help you build better websites using the Bootstrap CSS framework! Just download your template and start going, no strings attached!</p>
-             <div class="row">
+                <div class="row">
 
-                    <div class="col-xs-6 col-xs-offset-2 col-md-4 col-md-offset-3">
-                        <input type="password" class="form-control input-lg" placeholder="Enter password.."><br/>
+                    {% if not request.user.is_authenticated %}
+                        <form action="/" method="POST">
+                            <div class="col-xs-6 col-xs-offset-2 col-md-4 col-md-offset-3">
+                            {% csrf_token %}
+                            {{ token_form.token }}
+                            </div>
+                            {{ token_form.token.errors }}
+                            <div class="col-xs-1">
+                                 <input type="submit" class="btn btn-primary btn-xl" value="Come In" />
+                            </div>
+                        </form>
+{#                        <input type="password" class="form-control input-lg" placeholder="Enter password.."><br/>#}
 
-                    </div>
-                    <div class="col-xs-1">
-                        <a href="#" class="btn btn-primary btn-xl">Come In</a>
-                    </div>
-                <div class="col-md-12"><button class="center-block" data-toggle="modal" data-target="#formModal" data-whatever="@getbootstrap">No password yet?</button></div>
+                <div class="col-md-12"><a class="center-block" data-toggle="modal" data-target="#formModal" data-whatever="@getbootstrap">No password yet?</a></div>
 
-                 <img class="img-responsive child1"  src="{% static 'img/child1.png' %}">
+                        {% else %}
+                       <div class="col-md-12"><h4>Hello {{ request.user.username }}!</h4>
+                           <a href="/catalog/"><button class="btn btn-primary btn-xl">Catalog</button></a>
+                           <a href="/logout/"><button class="btn btn-danger btn-xl">Logout</button></a>
+                           </div>
+                    {% endif %}
+
+
             </div>
 
             </div>
