--- a/templates/modal_reg.html
+++ b/templates/modal_reg.html
@@ -7,27 +7,33 @@
         <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
         <h4 class="modal-title" id="exampleModalLabel">Password registration</h4>
       </div>
+
+      <form action="/" method="POST">
       <div class="modal-body">
 
-         <div class="form-group">
-             <input type="text" class="form-control" placeholder="Your Name *" id="name" required data-validation-required-message="Please enter your name.">
-             <p class="help-block text-danger"></p>
-         </div>
-            <div class="form-group">
-                <input type="email" class="form-control" placeholder="Your Email *" id="email" required data-validation-required-message="Please enter your email address.">
-                <p class="help-block text-danger"></p>
-            </div>
-            <div class="form-group">
-                <input type="tel" class="form-control" placeholder="Your Phone *" id="phone" required data-validation-required-message="Please enter your phone number.">
-                <p class="help-block text-danger"></p>
-            </div>
+          {{ message_form }}
+          {{ message_form.errors }}
+
+{#         <div class="form-group">#}
+{#             <input type="text" class="form-control" placeholder="Your Name *" id="name" required data-validation-required-message="Please enter your name.">#}
+{#             <p class="help-block text-danger"></p>#}
+{#         </div>#}
+{#            <div class="form-group">#}
+{#                <input type="email" class="form-control" placeholder="Your Email *" id="email" required data-validation-required-message="Please enter your email address.">#}
+{#                <p class="help-block text-danger"></p>#}
+{#            </div>#}
+{#            <div class="form-group">#}
+{#                <input type="tel" class="form-control" placeholder="Your Phone *" id="phone" required data-validation-required-message="Please enter your phone number.">#}
+{#                <p class="help-block text-danger"></p>#}
+{#            </div>#}
 
 
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Get password</button>
+        <button type="submit" class="btn btn-primary">Get password</button>
       </div>
+    </form>
     </div>
   </div>
 </div>
