--- a/templates/nav.html
+++ b/templates/nav.html
@@ -8,7 +8,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand page-scroll" href="#page-top">KIA</a>
+                <a class="navbar-brand page-scroll" href="#page-top">KIDS INTO ACTION</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
