--- a/static/static_dirs/less/creative.less
+++ b/static/static_dirs/less/creative.less
@@ -393,24 +393,36 @@ body {
 //  transform: translateZ(-2px) scale(3);
 //}
 
-
-
-
 .catalog {
   text-align: center;
 
 }
 
 .catalog_a {
-  border:1px solid #ccc;
+  border: 1px solid #DDDDDD;
+  border-radius: 5px;
   padding: 2%;
   margin-bottom: 2%;
-    span {
-      color: @theme-dark;
-      display: inline-block;
-      margin-bottom: 2%;
-      font-weight: 700;
-      font-size: 16px;
-    }
-
 }
+
+.catalog_a span {
+  color: @theme-dark;
+  display: inline-block;
+  margin-bottom: 2%;
+  font-weight: 700;
+  font-size: 16px;
+}
+
+
+.lang {
+  padding: 5%;
+}
+
+.tab {
+  margin-top: 6%;
+}
+
+
+
+
+
