--- a/templates/contact.html
+++ b/templates/contact.html
@@ -4,7 +4,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <h2 class="section-heading">Let's Get In Touch!</h2>
+                    <h2 class="section-heading"> Contact us</h2>
                     <hr class="primary">
                     <p>Ready to start your next project with us? That's great! Give us a call or send us an email and we will get back to you as soon as possible!</p>
                 </div>
@@ -14,19 +14,11 @@
                 </div>
                 <div class="col-lg-4 text-center">
                     <i class="fa fa-envelope-o fa-3x wow bounceIn" data-wow-delay=".1s"></i>
-                    <p><a href="mailto:your-email@your-domain.com">feedback@startbootstrap.com</a></p>
+                    <p><a href="mailto:your-email@your-domain.com">josh@kidsintoaction.com</a></p>
 
                 </div>
 
-{##}
-{#            </div>#}
-{#            <div class="parallax">#}
-{#  <div class="parallax__layer parallax__layer--back">#}
-{#      <img src="{% static 'img/logo.png' %}" alt=""/>#}
-{#  </div>#}
-{#  <div class="parallax__layer parallax__layer--base">#}
-{#             <img src="{% static 'img/logo.png' %}" alt=""/>#}
-{#  </div>#}
+
 </div>
         </div>
     </section>
