--- a/templates/scripts.html
+++ b/templates/scripts.html
@@ -22,3 +22,7 @@
 
     <!-- Custom Theme JavaScript -->
     <script src="{% static 'js/creative.js' %}"></script>
+
+    <script>
+    $('#example').popover(options)
+</script>
