--- a/templates/about.html
+++ b/templates/about.html
@@ -1,17 +1,21 @@
 {% load staticfiles %}
 
- <section id="about" data-dir="up" class="parallax">
-            <div class="container">
+ <section id="about" class="parallax1" data-parallax-image="{% static 'img/aboutbg1.png' %}">
+            <div class="container" >
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <h2 class="section-heading">We've got what you need!</h2>
+                    <h2 class="section-heading" style="color: #ffffff;">About us.</h2>
                     <hr class="light">
-                    <p class="text-faded">Start Bootstrap has everything you need to get your new website up and running in no time! All of the templates and themes on Start Bootstrap are open source, free to download, and easy to use. No strings attached!</p>
+                    <p class="text-faded">Kids Into Action was created to improve the effectiveness generalist teachers charged with leading physical activity exercises.
+Our goal is to enhance the impact of the physical activities that our youth participate in, helping to set them on a path to a lifelong active lifestyle.
+We will do this by continuing to create resources and products that teachers will find easy to use and that kids enjoy so that physical activity can become a fun and integral part of their daily lives.
+We rely heavily on our dedicated team of Physical Education professionals to ensure the proper instruction and safety of the products we create and distribute.
+Towards that goal we have developed multiple “plug-and-play” resources including musical, instructional CD’s to help with the implementation of Daily Physical Activity initiatives countrywide. Each routine includes warm-up, stretching, moderate & vigorous activity and a cool down session, and they are all easy to use and fun to do!</p>
                     <a href="#" class="btn btn-default btn-xl">Get Started!</a>
                 </div>
             </div>
         </div>
-{#        <div id="demo-1" data-dir="up" class="parallax"></div>#}
-{#        <div id="demo-2" data-dir="down" class="parallax"></div>#}
 
     </section>
+
+
