--- a/templates/head.html
+++ b/templates/head.html
@@ -1,7 +1,7 @@
 {% load staticfiles %}
 
 <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta htt-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">
@@ -18,13 +18,17 @@
     <link rel="stylesheet" href="{% static 'font-awesome/css/font-awesome.min.css' %}" type="text/css">
 
     <!-- Plugin CSS -->
-{#    <link rel="stylesheet" href="{% static 'css/animate.min.css' %}" type="text/css">#}
+    <link rel="stylesheet" href="{% static 'css/animate.min.css' %}" type="text/css">
 
 
 
-    <!-- Custom CSS -->
-    <link rel="stylesheet" href="{% static 'css/creative.css' %}" type="text/css">
- <link rel="stylesheet/less" type="text/css" href="{% static 'less/creative.less' %}" />
+{#    <!-- Custom CSS -->#}
+{#    <link rel="stylesheet" href="{% static 'less/creative.css' %}" type="text/css">#}
+<link rel="stylesheet/less" type="text/css" href="{% static 'less/creative.less' %}" />
+     <script src="{% static 'js/less.min.js' %}" type="text/javascript"></script>
+
+    <script type="text/javascript" src="{% static 'js/jquery.touchSwipe.js' %}"></script>
+    <script type="text/javascript" src="{% static 'js/jquery.horizonScroll.js' %}"></script>
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -32,7 +36,6 @@
         <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
-     <script src="{% static 'js/less.min.js' %}" type="text/javascript"></script>
 
 
 
