--- a/templates/base.html
+++ b/templates/base.html
@@ -1,3 +1,5 @@
+{% load staticfiles %}
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -18,7 +20,6 @@
 
 <!-- contact -->
 {% block contact %}{% endblock %}
-
 
 
 <!-- Scripts -->
