--- a/templates/catalog.html
+++ b/templates/catalog.html
@@ -3,7 +3,8 @@
 <head>
 {% block head %}{% include 'head.html' %}{% endblock %}
 
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script><!-- jQuery Latest -->
+{#    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script><!-- jQuery Latest -->#}
+ <script src="{% static 'js/jquery.js' %}"></script>
 	<script src="{% static 'build/mediaelement-and-player.min.js' %}"></script><!-- Audio/Video Player jQuery -->
 	<script src="{% static 'build/mep-feature-playlist.js' %}"></script><!-- Playlist JavaSCript -->
 
@@ -24,8 +25,8 @@
     <div class="row">
         <div class="col-md-3">
             <div class="lang center-block" style="text-align: center">
-                <a class="btn btn-default {% if current_language == 1 %}active{% endif %}" href="?language=1&category={{ current_category.id }}">English</a>
-                <a class="btn btn-default {% if current_language == 2 %}active{% endif %}" href="?language=2&category={{ current_category.id }}">French</a>
+                <a class="btn btn-default {% if current_language == 1 %}active{% endif %}" href="?language=1">English</a>
+                <a class="btn btn-default {% if current_language == 2 %}active{% endif %}" href="?language=2">French</a>
             </div>
         </div>
     </div>
@@ -94,16 +95,18 @@
 {% block contact %}{% include 'contact.html' %}{% endblock %}
 {#{% block contact %}{% include 'contact.html' %}{% endblock %}#}
 
+
+
  <script src="{% static 'js/bootstrap.min.js' %}"></script>
 
     <!-- Plugin JavaScript -->
     <script src="{% static 'js/jquery.easing.min.js' %}"></script>
     <script src="{% static 'js/jquery.fittext.js' %}"></script>
     <script src="{% static 'js/creative.js' %}"></script>
-    <script src="{% static 'js/simpleparallax.min.js' %}"></script>
+    <script src="{% static 'js/jquery.myParallax.js' %}"></script>
 
     <script>
-        $('.parallax').simpleParallax();
+        $("[data-parallax-image]").myParallax();
 
     </script>
 <script>
@@ -126,18 +129,6 @@ $('.progression-single').mediaelementplayer({
 	features: ['playpause','current','progress','duration','tracks','volume','fullscreen']
 	});
 </script>
-
-
-
-
-
-
-
-
-
-
-
-
 
 </body>
 
