--- a/templates/contact.html
+++ b/templates/contact.html
@@ -9,14 +9,15 @@
                     <p>Ready to start your next project with us? That's great! Give us a call or send us an email and we will get back to you as soon as possible!</p>
                 </div>
                 <div class="col-lg-4 col-lg-offset-2 text-center">
-                    <i class="fa fa-phone fa-3x wow bounceIn"></i>
-                    <p>123-456-6789</p>
+                    <i class="fa fa-link fa-3x wow bounceIn"></i><br/>
+                    <a href="http://Kidsintoaction.com">www.kidsintoaction.com</a>
                 </div>
                 <div class="col-lg-4 text-center">
                     <i class="fa fa-envelope-o fa-3x wow bounceIn" data-wow-delay=".1s"></i>
                     <p><a href="mailto:your-email@your-domain.com">josh@kidsintoaction.com</a></p>
 
                 </div>
+
 
 
 </div>
