--- a/templates/catalog.html
+++ b/templates/catalog.html
@@ -25,8 +25,8 @@
     <div class="row">
         <div class="col-md-3">
             <div class="lang center-block" style="text-align: center">
-                <a class="btn btn-default {% if current_language == 1 %}active{% endif %}" href="?language=1">English</a>
-                <a class="btn btn-default {% if current_language == 2 %}active{% endif %}" href="?language=2">French</a>
+                <a class="btn btn-default {% if current_language == 1 %}active{% endif %}" href="?language=1&grade={{ grade }}">English</a>
+                <a class="btn btn-default {% if current_language == 2 %}active{% endif %}" href="?language=2&grade={{ grade }}">French</a>
             </div>
         </div>
     </div>
@@ -47,13 +47,13 @@
   <div class="tab-content">
     <div role="tabpanel" class="tab-pane{% if current_category.type == 2 %} active{% endif %}" id="home"> <ul class="nav nav-pills nav-stacked bord">
            {% for item in audio_categories %}
-                 <li role="presentation" {% if current_category.id == item.id %} class="active" {% endif %}><a href="?category={{ item.id }}&language={{ current_language }}">{{ item.title }}</a></li>
+                 <li role="presentation" {% if current_category.id == item.id %} class="active" {% endif %}><a href="?grade={{ grade }}&category={{ item.id }}&language={{ current_language }}">{{ item.title }}</a></li>
             {% endfor %}
             </ul></div>
     <div role="tabpanel" class="tab-pane {% if current_category.type == 1 %} active{% endif %}" id="profile">
     <ul class="nav nav-pills nav-stacked bord">
         {% for item in video_categories %}
-                <li role="presentation" {% if current_category.id == item.id %}class="active"{% endif %}><a href="?category={{ item.id }}&language={{ current_language }}">{{ item.title }}</a></li>
+                <li role="presentation" {% if current_category.id == item.id %}class="active"{% endif %}><a href="?grade={{ grade }}&category={{ item.id }}&language={{ current_language }}">{{ item.title }}</a></li>
         {% endfor %}
     </ul>
 
@@ -66,7 +66,7 @@
 
         <div class="col-md-9">
 
-            <h3 class="catalog active"><strong>{{ current_category.title }}<strong></h3>
+            <h3 class="catalog active"><strong>{{current_category.get_grade_display }}: {{ current_category.title }}<strong></h3>
          {% if current_category.type == 2 %}
             <div class="progression-playlist-height responsive-wrapper responsive-audio" style="max-width:100%; padding-bottom:174px;"><!-- Adjust padding-bottom as needed so the playlist doesn't cover content below -->
                 <audio class="progression-playlist progression-skin progression-minimal-light progression-audio-player" controls="controls" preload="none">                     {% for item in media %}
