fix various things

--- a/templates/header.html
+++ b/templates/header.html
@@ -1,5 +1,11 @@
 {% load staticfiles %}
 
+<style>
+    .errorlist {
+     color: #cc2222;
+    }
+</style>
+
  <header>
 
         <div class="header-content" >
