--- a/templates/about.html
+++ b/templates/about.html
@@ -1,6 +1,6 @@
 {% load staticfiles %}
 
- <section id="about" class="parallax1" data-parallax-image="{% static 'img/aboutbg1.png' %}">
+ <section id="about" data-speed="6" data-type="background">
             <div class="container" >
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
@@ -11,7 +11,7 @@ Our goal is to enhance the impact of the physical activities that our youth part
 We will do this by continuing to create resources and products that teachers will find easy to use and that kids enjoy so that physical activity can become a fun and integral part of their daily lives.
 We rely heavily on our dedicated team of Physical Education professionals to ensure the proper instruction and safety of the products we create and distribute.
 Towards that goal we have developed multiple “plug-and-play” resources including musical, instructional CD’s to help with the implementation of Daily Physical Activity initiatives countrywide. Each routine includes warm-up, stretching, moderate & vigorous activity and a cool down session, and they are all easy to use and fun to do!</p>
-                    <a href="#" class="btn btn-default btn-xl">Get Started!</a>
+                    <a href="#" class="btn btn-default btn-xl"  data-toggle="modal" data-target="#formModal" data-whatever="@getbootstrap">Get Started!</a>
                 </div>
             </div>
         </div>
