--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,6 +1,6 @@
 {% load staticfiles %}
 
-<section id="contact">
+<section id="contact" id="about" data-speed="2" data-type="background">
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
