--- a/templates/header.html
+++ b/templates/header.html
@@ -13,24 +13,32 @@
                 <hr>
                 <p>Start Bootstrap can help you build better websites using the Bootstrap CSS framework! Just download your template and start going, no strings attached!</p>
 
-
+            {% if success %}Molodecj{% endif %}
                     {% if not request.user.is_authenticated %}
-                        {{ token_form.token.errors }}
+                        {{ login_form.password.errors }}
+                        {{ login_form.schools.errors }}
+                        {{ login_form.email.errors }}
+                        {{  login_form.non_field_errors }}
+
                         <form  action="/" method="POST">
                             <div style="width: 40%" class="center-block">
                             {% csrf_token %}
-                            {{ token_form.token }}
+                               {{ login_form.schools.label }}: {{ login_form.schools }}
+                                <div class="row">
+                          <div class="col-md-6">{{ login_form.password.label }}: {{ login_form.password }}</div>
+                              <div class="col-md-6"> {{ login_form.email.label }}: {{ login_form.email }}
+                              </div>
+                                    </div>
+                                <input style="margin-top: 10px" type="submit" class="btn btn-primary btn-md center-block" value="ENTER" />
                             </div>
 
 
-                            <input style="margin-top: 10px" type="submit" class="btn btn-primary btn-xl center-block" value="Come In" />
+
 
                         </form>
 
 
-                        <div class="col-xs-12">
-                                        <a style="margin-top: 10px; cursor: pointer"  class="center-block" data-toggle="modal" data-target="#formModal" data-whatever="@getbootstrap">No token yet?</a>
-                        </div>
+
                         {% else %}
                        <div class="col-md-12"><h4 style="display:block; margin-bottom: 10px">Hello {{ request.user.username }}!</h4>
 
