--- a/templates/head.html
+++ b/templates/head.html
@@ -23,8 +23,8 @@
 
 
 {#    <!-- Custom CSS -->#}
-{#    <link rel="stylesheet" href="{% static 'less/creative.css' %}" type="text/css">#}
-<link rel="stylesheet/less" type="text/css" href="{% static 'less/creative.less' %}" />
+    <link rel="stylesheet" href="{% static 'less/creative.css' %}" type="text/css">
+{#<link rel="stylesheet/less" type="text/css" href="{% static 'less/creative.less' %}" />#}
      <script src="{% static 'js/less.min.js' %}" type="text/javascript"></script>
 
     <script type="text/javascript" src="{% static 'js/jquery.touchSwipe.js' %}"></script>
