--- a/static/static_dirs/css/creative.css
+++ b/static/static_dirs/css/creative.css
@@ -143,14 +143,12 @@ aside {
 header {
   position: relative;
   width: 100%;
-  min-height: auto;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  background-size: cover;
-  -o-background-size: cover;
-  background-color: #fff;
   text-align: center;
-  color: #222222;
+  background: url(../img/intro.png) 50% 0 fixed;
+  height: auto;
+  margin: 0 auto;
+  box-shadow: 0 0 50px rgba(0, 0, 0, 0.8);
+  padding: 100px 0;
 }
 header .header-content {
   position: relative;
@@ -158,11 +156,13 @@ header .header-content {
   padding: 100px 15px 100px;
   width: 100%;
 }
-header .header-content .header-content-inner h1 {
+header .header-content .header-content-inner h1,
+header .header-content .header-content-inner h4 {
   font-weight: 700;
   text-transform: uppercase;
   margin-top: 0;
   margin-bottom: 0;
+  color: #222222;
 }
 header .header-content .header-content-inner hr {
   margin: 30px auto;
@@ -180,6 +180,8 @@ header .header-content .header-content-inner p {
   header .header-content {
     position: absolute;
     top: 50%;
+    -webkit-transform: translateY(-50%);
+    -ms-transform: translateY(-50%);
     transform: translateY(-50%);
     padding: 0 50px;
   }
@@ -402,22 +404,76 @@ body {
   height: 250px;
   position: absolute;
   bottom: 50px;
-  display: none;
-}
-.parallax {
-  height: 100%;
-  background-size: cover;
-}
-#paralax1 {
-  background-image: url(../img/homebg.png);
 }
 #about {
-  background-image: url(../img/dark_10-wallpaper-3840x2160.jpg);
+  background: url('../img/aboutbg1.png') 50% 0 fixed;
+  height: auto;
+  margin: 0 auto;
+  width: 100%;
+  position: relative;
+  box-shadow: 0 0 50px rgba(0, 0, 0, 0.8);
+  padding: 200px 0;
+  background-color: #6b5ca2;
+}
+.catalog {
+  text-align: center;
+}
+.catalog_a {
+  border: 1px solid #DDDDDD;
+  border-radius: 5px;
+  padding: 2%;
+  margin-bottom: 2%;
+}
+.catalog_a span {
+  color: #222222;
+  display: inline-block;
+  margin-bottom: 2%;
+  font-weight: 700;
+  font-size: 16px;
+}
+.lang {
+  padding: 5%;
+}
+.tab {
+  margin-top: 6%;
+}
+#contact {
+  background: url(../img/contant.png) 50% 0 fixed;
+  height: auto;
+  margin: 0 auto;
+  width: 100%;
+  position: relative;
+  box-shadow: 0 0 50px rgba(0, 0, 0, 0.8);
+  padding: 100px 0;
+  color: #fff;
+  min-height: 100%;
+}
+#mediacatalog {
+  width: 100%;
+  min-height: 100%;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   background-size: cover;
   -o-background-size: cover;
-  background-color: #6b5ca2;
+  background-color: #fffbfb;
+  color: #222222;
+  text-align: left;
 }
-
-
+.parallax {
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  background-size: cover;
+  -o-background-size: cover;
+  background-image: url("../img/aboutbg1.png");
+}
+.errorlist {
+  text-align: left;
+  color: #cc2222;
+  font-size: 16px;
+  display: inline-block;
+  list-style: none;
+  border: 1px solid #CCCCCC;
+  padding: 1%;
+  border-radius: 5px;
+  font-weight: bolder;
+}
