--- a/static/static_dirs/css/creative.css
+++ b/static/static_dirs/css/creative.css
@@ -465,6 +465,7 @@ body {
   background-size: cover;
   -o-background-size: cover;
   background-image: url("../img/aboutbg1.png");
+    background-repeat: no-repeat;
 }
 .errorlist {
   text-align: left;
